<resources>
    <string name="app_name">Estudios.mx v1.0.6</string>
    <string name="action_settings">Settings</string>
    <string name="app_version">1.0.6</string>
    <string name="url_aplicacion">https://territorial.cdmx.gob.mx</string>
    <string name="developer_api">https://developer.territorial.cdmx.gob.mx</string>
    <string name="url_gps">https://territorial.cdmx.gob.mx</string>
    <string name="project_object">EstudiosCDMX</string>
    <string name="app_project">EstudiosCDMX</string>
    <string name="urls_gps">https://territorial.cdmx.gob.mx</string>
    <string name="url_upgrade">https://territorial.cdmx.gob.mx</string>
    <string name="download">Download</string>
    <string name="write_file">This app needs access to your file storage so that it can write files.</string>
    <string name="sistema_pruebas"><![CDATA[<b>Sistema de pruebas</b>]]></string>
    <string name="hello_world">Hello world!</string>
    <string name="zona">zona</string>
    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="noSabe">No Sabe</string>
    <string name="de_acuerdo">De acuerdo</string>
    <string name="nide_acuerdo">Ni de acuerdo, ni en desacuerdo</string>
    <string name="en_desacuerdo">En desacuerdo</string>
    <string name="mejor">Mejor</string>
    <string name="igual">Igual</string>
    <string name="peor">Peor</string>
    <string name="mucha">Mucha</string>
    <string name="poca">Poca</string>
    <string name="ninguna">Ninguna</string>
    <string name="radio">Radio</string>
    <string name="television">Televisión</string>
    <string name="periodico">Periódico</string>
    <string name="internet">Internet</string>
    <string name="otro">Otro</string>
    <string name="otraForma">Otra forma</string>
    <string name="MuyBien">Muy bien</string>
    <string name="Bien">Bien</string>
    <string name="Regular">Regular</string>
    <string name="Mal">Mal</string>
    <string name="MuyMal">Muy mal</string>
    <string name="Mbueno">Muy bueno</string>
    <string name="Bueno">Bueno</string>
    <string name="Malo">Malo</string>
    <string name="MuyMalo">Muy malo</string>
    <string name="Muybuena">Muy buena</string>
    <string name="Buena">Buena</string>
    <string name="Mala">Mala</string>
    <string name="MuyMala">Muy mala</string>
    <string name="MuySeguro">Muy seguro</string>
    <string name="AlgoSeguro">Algo seguro</string>
    <string name="AlgoInseguro">Algo inseguro</string>
    <string name="MuyInseguro">Muy inseguro</string>
    <string name="Muchisimo">Muchísimo</string>
    <string name="Mucho">Mucho</string>
    <string name="Poco">Poco</string>
    <string name="Nada">Nada</string>
    <string name="MuchoMasCerca">Mucho más cerca</string>
    <string name="Cerca">Cerca</string>
    <string name="Lejos">Lejos</string>
    <string name="MuchoMasLejos">Mucho más lejos</string>
    <string name="MuchoMasBaratos">Mucho más baratos</string>
    <string name="Masbaratos">Más baratos</string>
    <string name="Mascaros">Más Caros</string>
    <string name="MuchoMasCaros">Mucho más Caros</string>
    <string name="Mmejores">Mucho mejores</string>
    <string name="Mejores">Mejores</string>
    <string name="Peores">Peores</string>
    <string name="Mpeores">Mucho peores</string>
    <string name="C_1_alcalde">CandidatoAlcalde - 1</string>
    <string name="C_2_alcalde">CandidatoAlcalde - 2</string>
    <string name="C_3_alcalde">CandidatoAlcalde - 3</string>
    <string name="C_4_alcalde">CandidatoAlcalde - 4</string>
    <string name="C_1_Morenaalcalde">CandidatoMorenaAlcalde - 1</string>
    <string name="C_2_Morenaalcalde">CandidatoMorenaAlcalde - 2</string>
    <string name="C_3_Morenaalcalde">CandidatoMorenaAlcalde - 3</string>
    <string name="C_4_Morenaalcalde">CandidatoMorenaAlcalde - 4</string>
    <string name="C_1_local">CandidatoLocal - 1</string>
    <string name="C_2_local">CandidatoLocal - 2</string>
    <string name="C_3_local">CandidatoLocal - 3</string>
    <string name="C_4_local">CandidatoLocal - 4</string>
    <string name="C_1_Morenalocal">CandidatoMorenaLocal - 1</string>
    <string name="C_2_Morenalocal">CandidatoMorenaLocal - 2</string>
    <string name="C_3_Morenalocal">CandidatoMorenaLocal - 3</string>
    <string name="C_4_Morenalocal">CandidatoMorenaLocal - 4</string>
    <string name="C_1_federal">CandidatoFederal - 1</string>
    <string name="C_2_federal">CandidatoFederal - 2</string>
    <string name="C_3_federal">CandidatoFederal - 3</string>
    <string name="C_4_federal">CandidatoFederal - 4</string>
    <string name="C_1_Morenafederal">CandidatoMorenaFederal - 1</string>
    <string name="C_2_Morenafederal">CandidatoMorenaFederal - 2</string>
    <string name="C_3_Morenafederal">CandidatoMorenaFederal - 3</string>
    <string name="C_4_Morenafederal">CandidatoMorenaFederal - 4</string>
    <string name="quickstart_message">Click the SUBSCRIBE TO WEATHER button below to subscribe to the
        weather topic. Messages sent to the weather topic will be received. The LOG TOKEN button logs the
        InstanceID token to logcat.</string>
    <string name="subscribe_to_weather">Subscribe To Weather</string>
    <string name="log_token">Log Token</string>
    <string name="msg_subscribed">Subscribed to weather topic</string>
    <string name="msg_token_fmt" translatable="false">InstanceID Token: %s</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="ENTRADA">Buenos días/tardes. Me presento, mi nombre es: _____________ y vengo de Estudios.mx. En este momento estamos realizando un estudio de opinión, me permite unos minutos por favor, seré breve. En ningún momento le voy a solicitar datos personales.</string>
    <string name="PREGUNTA1">¿Cómo se entera Usted de las noticias regularmente?</string>
    <string name="PREGUNTA2">Sólo como información, NO le voy a solicitar datos o sus cuentas ¿Usted tiene cuenta personal en Facebook?</string>
    <string name="PREGUNTA3">¿Tiene cuenta personal en Twitter?</string>
    <string name="PREGUNTA4">¿Usted utiliza WhatsApp?</string>
    <string name="PREGUNTA5">Comparada con la situación que tenía el país hace un año, ¿cómo diría usted que está la situación actual del país, mejor o peor? (no leer igual de bien, igual de mal)</string>
    <string name="PREGUNTA6">¿Cuál considera usted que es el principal problema de la Ciudad de México? (REGISTRAR PRIMER RESPUESTA ESPONTÁNEA, NO LEA OPCIONES)</string>
    <string name="PREGUNTA7">Pasando a otro tema ¿Cuál considera usted que es el principal problema de su colonia? (REGISTRAR PRIMER RESPUESTA ESPONTÁNEA, NO LEA OPCIONES) </string>
    <string name="PREGUNTApc">¿Cómo evalúa usted a… en relación a la atención de la pandemia de Coronavirus, bien o mal?  (no leer regular)</string>
    <string name="PREGUNTApc_1">Médicos y hospitales</string>
    <string name="PREGUNTApc_2">Autoridades de Salud</string>
    <string name="PREGUNTApc_3">Gobierno de la Ciudad de México</string>
    <string name="PREGUNTApc_4">Su alcaldé</string>
    <string name="PREGUNTA8">Con lo que usted sabe ¿está de acuerdo, o en desacuerdo con el trabajo realizado hasta ahora por el Presidente de la República, Andrés Manuel López Obrador? (no leer ni de acuerdo ni en desacuerdo)</string>
<string name="PREGUNTA9">Hablando ahora de la Ciudad de México y de su gobierno, con lo que Ud. sabe, ¿está de acuerdo o en desacuerdo con el trabajo realizado hasta ahora por la Jefa de Gobierno, Claudia Sheinbaum?  ( no leer ni de acuerdo ni en desacuerdo)</string>
<string name="PREGUNTA10">Con lo que Ud. sabe, ¿está de acuerdo o en desacuerdo con el trabajo realizado hasta ahora por su Alcalde (antes delegado)? (no leer ni de acuerdo ni en desacuerdo)</string>
<string name="PREGUNTA11">Con lo que Ud. sabe, ¿está de acuerdo o en desacuerdo con el trabajo realizado hasta ahora por sus Diputados en este distrito electoral? (no leer ni de acuerdo ni en desacuerdo)</string>
<string name="PREGUNTA12">Podría decirme el nombre del alcalde/ alcaldesa de</string>
<string name="PREGUNTA13">Actualmente ¿tiene usted credencial de elector vigente?</string>
<string name="PREGUNTA14">En junio próximo habrá elecciones para elegir alcalde, diputados locales y federales. ¿Qué tan interesado está usted de ir a votar en estas elecciones: totalmente interesado, bastante interesado, poco interesado o nada interesado?</string>
<string name="PREGUNTA15">Y dígame, ¿qué tan seguro está usted de ir a votar en estas elecciones: totalmente seguro, bastante seguro, poco seguro o nada seguro?</string>
<string name="PREGUNTA16">Solamente para las estadísticas ¿Usted votó en las pasadas elecciones del 2018?</string>
<string name="PREGUNTA16a">¿Y en esas las elecciones del año 2018, por cuál partido votó para alcalde/ alcaldesa de (ALCALDÍA CORRESPONDIENTE)? (ESPONTÁNEA) </string>
<string name="PREGUNTA16b">Y si hubiera podido votar, ¿por cuál partido hubiera votado usted para alcalde/ alcaldesa de… (ALCALDÍA CORRESPONDIENTE) en julio del 2018?</string>
<string name="PREGUNTA17">Independientemente del partido por el que usted vota, ¿usted normalmente se considera panista, priísta, perredista, morenista o de otro partido?</string>
<string name="PREGUNTA17a">¿Está usted completamente seguro de que votará por ese partido o cree que pudiera cambiar de opción de aquí a la elección?</string>
<string name="PREGUNTA18">¿Por cuál partido nunca votaría? (registrar primera mención)</string>
<string name="PREGUNTA19">Solo para estadística, ¿me podría decir por quien voto para Jefe de Gobierno en las elecciones de 2018? (espontánea)</string>
<string name="PREGUNTA19a">A dos años de la elección ¿sigue pensando que fue la mejor elección para la Jefatura de Gobierno? (espontáneo)</string>
<string name="PREGUNTA19b">Después de dos años de la elección ¿cómo cree que está haciendo su trabajo la Jefa de Gobierno, Claudia Sheinbaum, bien o mal? (no leer regular)</string>
<string name="PREGUNTA20">A usted que cree que beneficie más a su alcaldía (INSERTAR ALCALDÍA CORRESPODIENTE), ¿qué continúe el mismo partido tres años más o que cambie el partido que gobierna la alcaldía?</string>
<string name="PREGUNTA21">La ley electoral vigente actualmente permite que alcaldes y/o diputados locales tengan oportunidad de reelegirse. Antes de que se lo mencionara ¿Usted ya lo sabía?</string>
<string name="PREGUNTA22">¿Qué tan de acuerdo está usted con esta disposición que permite que alcaldes y/o diputados locales tengan oportunidad de reelegirse?</string>
<string name="PREGUNTA23">Si su alcalde actual (Insertar nombre por sistema)  buscara la reelección en el 2021 por un periodo de tres años más en su puesto  ¿Qué tan dispuesto estaría a votar por él (ella)?</string>
<string name="PREGUNTA24">Le voy a leer una lista de personas. ¿Ha oído mencionar a...? (ENCUESTADOR: SI NO HA OÍDO MENCIONAR EL NOMBRE, CONTINÚE CON EL CANDIDATO SIGUIENTE) </string>
<string name="PREGUNTA24_1">CANDIDATO 1</string>
<string name="PREGUNTA24_1a">¿Qué opinión tiene de él (ella) muy buena, buena, mala o muy mala? </string>
<string name="PREGUNTA24_1b">¿Estaría usted dispuesto o no a votar por (INSERTAR NOMBRE DE CADA CANDIDATO) para alcalde/ alcaldesa de...(ALCALDÍA CORRESPONDIENTE) ?</string>
<string name="PREGUNTA24_2">CANDIDATO 2</string>
<string name="PREGUNTA25">Si los únicos candidatos a alcalde fueran CANDIDATO 1 por el PAN, CANDIDATO 2 por el PRI, CANDIDATO 3 por MORENA, CANDIDATO 4 por el PRD, ¿por cuál votaría usted?</string>
<string name="PREGUNTA28">Si los únicos candidatos a diputado federal fueran CANDIDATO 1 por el PAN, CANDIDATO 2 por el PRI, CANDIDATO 3 por MORENA, CANDIDATO 4 por el PRD, ¿por cuál votaría usted?</string>
<string name="PREGUNTA31">Si los únicos candidatos a diputado local fueran CANDIDATO 1 por el PAN, CANDIDATO 2 por el PRI, CANDIDATO 3 por MORENA, CANDIDATO 4 por el PRD, ¿por cuál votaría usted?</string>
</resources>