     <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
      xmlns:android="http://schemas.android.com/apk/res/android"
      android:id="@+id/estadisticas"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:onClick="Salir"
      tools:context=".MainActivity" >
      
      <ScrollView
      android:id="@+id/scrollView1"
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_alignParentLeft="true"
      android:layout_alignParentTop="true" >

      <LinearLayout
      android:id="@+id/lay31"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:orientation="vertical" >
      
      <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical" >
      
      <TextView
      android:id="@+id/textPregunta31"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/PREGUNTA31"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textColor="#002266"
      android:textStyle="bold" />
      
      <RadioGroup
      android:id="@+id/rdPregunta31"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical" >
      
          <RadioButton
          android:id="@+id/radio31_1"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="0"
            android:visibility="gone"
            />
            
          <RadioButton
          android:id="@+id/radio31_2"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="31"
            android:visibility="gone"
            />
            
          <RadioButton
          android:id="@+id/radio31_3"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="@string/C_1_local"
            />
            
          <RadioButton
          android:id="@+id/radio31_4"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="@string/C_2_local"
            />
            
          <RadioButton
          android:id="@+id/radio31_5"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="@string/C_3_local"
            />
            
          <RadioButton
          android:id="@+id/radio31_6"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="@string/C_4_local"
            />
            
          <RadioButton
          android:id="@+id/radio31_7"
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="Otro"
            />
            
          <RadioButton
          android:id="@+id/radio31_8"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_9"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_10"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_11"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_12"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_13"
          
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:button="@drawable/radiobutton_selector"
          android:textColor="@drawable/radiobutton_color_selector"
          android:textSize="16sp"
          android:theme="@style/RadioButton"
          android:text=""
          android:visibility="gone"
          />
          
          <RadioButton
          android:id="@+id/radio31_0"
          
          
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:button="@drawable/radiobutton_selector"
            android:textColor="@drawable/radiobutton_color_selector"
            android:textSize="16sp"
            android:theme="@style/RadioButton"
            android:text="No sabe / No contestó"
            />
            
      </RadioGroup>
      </LinearLayout>
      </LinearLayout>
      </ScrollView>
      </RelativeLayout>
      